# wingrip

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml  wingrip.manifest  wingrip.rc
src/: main.rs
src/config/: atomics.rs  bypass.rs  mod.rs  registry.rs  tests.rs  types.rs
src/input/: callbacks.rs  mod.rs  types.rs  watchdog.rs
src/logic/: joint_resize.rs  mod.rs  safety.rs  snapping.rs  types.rs
src/settings/: actions.rs  controls.rs  mod.rs  paint.rs  state.rs  types.rs
src/ui/: mod.rs  types.rs  wnd_proc.rs
