[package]
name = "wingrip"
version = "0.1.0"
edition = "2024"

[dependencies]
# Official safe high-performance Win32 API bindings
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "Win32_System_StationsAndDesktops"
] }

# Lock-free fast messaging channel
crossbeam-channel = "0.5.13"

# Config loading and parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
once_cell = "1.19.0"

[build-dependencies]
embed-resource = "2.5.0"
